metadata/sf-prod/force-app/main/default/objects/Contract/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <description>Sum of subscriptions ARR</description>
    <inlineHelpText>Sum of subscriptions ARR</inlineHelpText>
    <label>ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>