metadata/sf-prod/force-app/main/default/objects/Contract/fields/Is_Platinum__c.field-meta.xml
<CustomField>
    <fullName>Is_Platinum__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the contract is platinum</description>
    <inlineHelpText>Checked if the contract is platinum</inlineHelpText>
    <label>Is Platinum</label>
    <type>Checkbox</type>
</CustomField>