metadata/sf-prod/force-app/main/default/objects/Contract/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LAMBDA-53934 Capture primary Var/Reseller, Distributor Partner on the Opportunity</description>
    <inlineHelpText>Primary Partner on the Opportunity</inlineHelpText>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Contracts</relationshipLabel>
    <relationshipName>Partner_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>