metadata/sf-prod/force-app/main/default/objects/Contract/fields/Signed_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>Signed_Document_Link__c</fullName>
    <description>Lambda-53934 field to store URL of the signed document</description>
    <inlineHelpText>URL to the signed document</inlineHelpText>
    <label>Signed Document Link</label>
    <type>Url</type>
</CustomField>