metadata/sf-prod/force-app/main/default/objects/Contract/fields/Success_Level__c.field-meta.xml
<CustomField>
    <fullName>Success_Level__c</fullName>
    <description>Contract Success Level. Gets the value from the related opportunity.</description>
    <formula>TEXT(SBQQ__Opportunity__r.Success_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Success Level</label>
    <type>Text</type>
</CustomField>